--- a/style/style.css
+++ b/style/style.css
@@ -88,3 +88,24 @@
   .course{
    background-color:#536DFE;
   }
+
+
+.text_purple{
+    color: #3F51B5;
+}
+
+.text_blue{
+    color: #536DFE;
+}
+
+.text_orange{
+    color: #F44336;
+}
+
+.text_red{
+    color:#FFA000;
+}
+
+.text_white{
+    color:#FFFDE7;
+}
